--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project",
+  "name": "glactic-age-calculator",
   "version": "1.0.0",
-  "description": "",
+  "description": "will calculate an age of the user based on the planet they are from",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
@@ -9,7 +9,7 @@
     "start": "webpack-dev-server --open --mode=development"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ajdemski",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.5",
